<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/appbackground">

    <!-- Username Input -->
    <EditText
        android:id="@+id/et_username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:padding="12dp" />
    <!-- Password Input -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="8dp"/>
    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"/>

</LinearLayout>