<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="75dp"
    android:background="@drawable/appbackground">

    <!-- Event Name Input -->
    <EditText
        android:id="@+id/etEventName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/event_name"
        android:textColorHint="@color/black"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Event Date Input -->
    <EditText
        android:id="@+id/etEventDate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/event_date_mm_dd_yyyy"
        android:inputType="date"
        android:textColorHint="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etEventName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Add Event Button -->
    <Button
        android:id="@+id/btnAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etEventDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- RecyclerView for Events -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnAddEvent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="vertical"
        android:contentDescription="@string/recycler_view_content_description"/>
</androidx.constraintlayout.widget.ConstraintLayout>
